UI: Added Dialog box for create and update contact data.

--- a/ContactManagement/UI/src/app/create-contact/create-contact.component.html
+++ b/ContactManagement/UI/src/app/create-contact/create-contact.component.html
@@ -1,5 +1,5 @@
 <div class="form-container">
-    <h5>{{contactInput.isUpdated ? 'Update Contact- '+contact.email : 'Create a new Contact'}}</h5>
+    <h5>{{data.isUpdate ? 'Update Contact- '+data.contact.email : 'Create a new Contact'}}</h5>
     <!-- <div class="alert alert-danger" role="alert" *ngIf="errorMessage"> <p>{{errorMessage}}</p> </div> -->
     <div #errToast class="mb-4 mx-auto toast align-items-center text-white border-0" [ngClass]="isDataSumitted?'bg-success':'bg-danger'" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="d-flex">
@@ -9,7 +9,7 @@
             <button type="button" (click)="show()" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
     </div>
-    <form class="m-7 align-center" [formGroup]="contactForm">
+    <form class="mt-4 align-center" [formGroup]="contactForm">
         <div class="mb-3">
             <label for="inputEmail" class="form-label">Email address</label>
             <input type="email" class="form-control" name="email" id="inputEmail" formControlName="email">
@@ -24,7 +24,7 @@
             <small *ngIf="contactForm.get('firstName').invalid && contactForm.get('firstName').dirty && contactForm.get('firstName').value" class="text-danger">First Name must be between 3 to 15 characters</small>
         </div>
 
-        <div class="mb-3">
+        <div class="mb-4">
             <label for="lastName" class="form-label">Last Name</label>
             <input type="text" class="form-control" id="lastName" name="lastName" formControlName="lastName">
             <small *ngIf="contactForm.get('lastName').touched && contactForm.get('lastName').invalid && !contactForm.get('lastName').value" class="text-danger">Last Name is Required</small>
@@ -32,7 +32,7 @@
         </div>
         
         <div>
-            <button type="button" class="btn btn-primary" style="margin-right: 8px;" [disabled]="!contactForm.valid" (click)="submitUserConactData()">{{contactInput.isUpdated ? 'Update' : 'Create'}}</button>
+            <button type="button" class="btn btn-primary" style="margin-right: 8px;" [disabled]="!contactForm.valid" (click)="submitUserConactData()">{{data.isUpdate ? 'Update' : 'Create'}}</button>
             <button type="button" class="btn btn-danger" (click)="closeForm()">Close</button>
         </div>
     </form>
