--- a/ContactManagement/UI/src/app/app.component.css
+++ b/ContactManagement/UI/src/app/app.component.css
@@ -1,3 +1,13 @@
-.row{
-    margin-top: -0.5rem;
+h1{
+    margin-top: 1rem;
+    font-weight: 500;
+}
+th{
+    font-weight: 500;
+}
+
+.scrollable{
+    max-height: 400px;
+    overflow-x: scroll;
+    overflow-y: auto;
 }
