--- a/ContactManagement/UI/src/app/app.component.html
+++ b/ContactManagement/UI/src/app/app.component.html
@@ -1,10 +1,10 @@
 
-<div class="container mt-3">
-  <h2 class="text-center">{{title}}</h2>
-  <button class="btn btn-success"(click)="create()" >New</button>
+<div class="container">
+  <h1 class="text-center">{{title}}</h1>
+  <button type="button" class="btn btn-success" (click)="create()">New</button>
   <hr>
-  <div class="row"> 
-      <div [ngClass]="isShowContactForm ? 'col-md-8': 'col-md-12'">
+  <div class="row">
+      <div Class="col-md-12 scrollable">
         <table class="table table-striped table-hover">
           <thead>
             <tr>
@@ -31,18 +31,5 @@
           </tbody>
         </table>
       </div>
-      
-      <div class="col-md-4" *ngIf="isShowContactForm">
-        <app-create-contact [contactInput]="contactInput" (closeContactForm)="closeContactForm($event)"></app-create-contact>
-      </div>
-  </div>
-</div>
-
-<div class="toast align-items-center text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-  <div class="d-flex">
-    <div class="toast-body">
-      Hello, world! This is a toast message.
-    </div>
-    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
 </div>
