--- a/ContactManagement/UI/src/app/create-contact/create-contact.component.css
+++ b/ContactManagement/UI/src/app/create-contact/create-contact.component.css
@@ -4,17 +4,18 @@ input.ng-invalid.ng-touched{
 }
 
 .form-container{
-   background-color: whitesmoke;
-    margin-top: 1rem;
-    border-radius: .8rem;
+    background-color: whitesmoke;
     padding: 24px 14px;
+    width: 100%;
+    height: 100%;
 }
 h5{
     margin-bottom: 1rem;
     font-size: 1.2rem;
     text-align: center;
+    font-weight: 500;
 }
 
 label{
-  font-weight: 600;
+  font-weight: 500;
 }
